[package]
name = "matrix_test"
version = "0.1.0"
authors = ["Daniel Buecheler <dabch@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_rpi_led_matrix = { path = "../rust_rpi_led_matrix" }
image = "0.23.1"
